--- a/templates/upload.html
+++ b/templates/upload.html
@@ -18,11 +18,11 @@
         .upload-area {
             border: 2px dashed #6f42c1;
             border-radius: 10px;
-            padding: 40px;
+            padding: 60px;
             text-align: center;
             transition: background-color 0.3s;
             width: 90%; /* Responsive width */
-            max-width: 600px; /* Maximum width */
+            max-width: 800px; /* Meningkatkan lebar maksimum */
         }
         .upload-area:hover {
             background-color: #e9ecef;
@@ -38,12 +38,12 @@
             margin-top: 10px;
         }
         .upload-area .icon {
-            font-size: 80px;
+            font-size: 100px;
             color: #6f42c1;
         }
         .upload-area .text {
-            margin-top: 25px;
-            font-size: 18px;
+            margin-top: 30px;
+            font-size: 24px;
         }
         .loading {
             display: none;
