--- a/templates/chat.html
+++ b/templates/chat.html
@@ -105,12 +105,12 @@
       }
       .new-chat-btn {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 20px;
+        right: 15px;
         background-color: white;
         color: #6f42c1;
         border: 1px solid #6f42c1;
-        padding: 5px 10px;
+        padding: 10px 15px;
         border-radius: 5px;
         transition: background-color 0.3s, color 0.3s;
       }
@@ -146,7 +146,10 @@
   <body>
     <div class="chat-container">
       <!-- Chat Header -->
-      <div class="chat-header">Chatbot</div>
+      <div class="chat-header">
+        ChatPDF
+        <div style="font-size: 16px; font-weight: normal">Groq & Haystack</div>
+      </div>
 
       <!-- New Chat Button -->
       <a href="/upload" class="btn new-chat-btn">
@@ -178,7 +181,7 @@
           placeholder="Tanyakan sesuatu..."
           required
           autocomplete="off"
-          style="margin-right: 10px;"
+          style="margin-right: 10px"
         />
         <button type="submit" id="submit-button">
           <span id="submit-text">Kirim</span>
